--- a/info/task_description.html
+++ b/info/task_description.html
@@ -7,9 +7,9 @@
 <p>Those are the verification conditions:</p>
 
 <ul>
-    <li>Cond 1. the length should be bigger than 6;</li>
-    <li>Cond 2. should contain at least one digit, but it cannot consist of just digits;</li>
-    <li>Cond 3. if the password is longer than 9, we don't check [Cond 2].</li>
+    <li>the length should be bigger than 6;</li>
+    <li>should contain at least one digit, but it cannot consist of just digits;</li>
+    <li>if the password is longer than 9 - previous rule (about one digit), is not required.</li>
 </ul>
 
 
