--- a/translations/uk/hints/freeman_lex.html
+++ b/translations/uk/hints/freeman_lex.html
@@ -4,7 +4,7 @@
         Я уявлення не маю, як почати розв'язування цієї місії.
     </div>
     <div class="answer">
-        Давай продовжимо розв'язок у підказках з попередньої місії в серії.
+        Давай продовжимо розв'язок з останньої підказки попередньої місії в серії.
         <br />
         <br />
         <pre class="brush: python">
@@ -96,8 +96,6 @@ def is_acceptable_password(x: str) -> bool:
 
     return any((len(x) > 9, 0 < sum(ch.isdigit() for ch in x) < len(x) > 6))
         </pre>
-        <br />
-        <br />
         Тисни "Best solutions" в меню місії і ти побачиш багато інших цікавих розв'язків!
     </div>
 </div>
