--- a/translations/uk/hints/freeman_lex.html
+++ b/translations/uk/hints/freeman_lex.html
@@ -1,12 +1,14 @@
 <body data-author="freeman_lex">
 <div class="question-answer">
     <div class="question">
-        Я уявлення не маю, як почати розв'язування цієї місії.
+        <p>
+            Я уявлення не маю, як почати розв'язування цієї місії.
+        </p>
     </div>
     <div class="answer">
-        Давай продовжимо розв'язок з останньої підказки попередньої місії в серії.
-        <br />
-        <br />
+        <p>
+            Давай продовжимо розв'язок з останньої підказки попередньої місії в серії.
+        </p>
         <pre class="brush: python">
 def is_acceptable_password(password: str) -> bool:
 
@@ -16,34 +18,38 @@ def is_acceptable_password(password: str) -> bool:
 
     return all([cond1, cond2, cond3])
         </pre>
-        У цій місії тобі слід додати до розв'язку, що, при паролі довжиною більше
+        <p>
+            У цій місії тобі слід додати до розв'язку, що, при паролі довжиною більше
         9, умови про наявність і кількість цифр не застосовуються.
+        </p>
     </div>
 </div>
 <div class="question-answer">
     <div class="question">
-       Добре. Як мені це зробити?
+        <p>
+            Добре. Як мені це зробити?
+        </p>
     </div>
     <div class="answer">
-        Використай <a target="_blank" href="https://www.w3schools.com/python/gloss_python_if_statement.asp">if твердження</a> і
-        функцію len(), яка тобі вже знайома.
-        <br />
-        <br />
+        <p>
+            Використай <a target="_blank" href="https://www.w3schools.com/python/gloss_python_if_statement.asp">if твердження</a> і функцію len(), яка тобі вже знайома.
+        </p>
         <pre class="brush: python">
 if len(password) > 9:
-    # робити операції
+    ...
         </pre>
     </div>
 </div>
 <div class="question-answer">
     <div class="question">
-        Я не розумію, як виключити умови   
+        <p>
+            Я не розумію, як виключити умови.
+        </p>
     </div>
     <div class="answer">
-        Оскільки функція all() в return набуває True, коли всі елементи всередині True, 
-        тобі лише потрібно присвоїти необов'язковим умовам значення True, так наче вони вже виконані:
-        <br />
-        <br />
+        <p>
+            Оскільки функція <b class="code">all()</b> в return набуває <b class="code">True</b>, коли всі елементи всередині <b class="code">True</b>, тобі лише потрібно присвоїти необов'язковим умовам значення <b class="code">True</b>, так наче вони вже виконані:
+        </p>
         <pre class="brush: python">
 if len(password) > 9:    
     cond2 = cond3 = True
@@ -52,12 +58,14 @@ if len(password) > 9:
 </div>
 <div class="question-answer">
     <div class="question">
-        То як мій остаточний розв'язок має виглядати?
+        <p>
+            То як мій остаточний розв'язок має виглядати?
+        </p>
     </div>
     <div class="answer">
-        Ось він:
-        <br />
-        <br />
+        <p>
+            Ось він:
+        </p>
         <pre class="brush: python">
 def is_acceptable_password(password: str) -> bool:
 
@@ -73,38 +81,46 @@ def is_acceptable_password(password: str) -> bool:
 </div>
 <div class="question-answer">
     <div class="question">
-        Покажи мені більше розв'язків!<br />
-        Адже я хочу стати справжнім Python Ніндзею!
+        <p>
+            Покажи мені більше розв'язків!<br />
+            Адже я хочу стати справжнім 🥇 Python Ніндзею!
+        </p>
     </div>
     <div class="answer">
-        Звісно, тримай!<br />
-        Перевірка всього пароля на те, чи є він числом (текстове ціле число без
-        букв) або всіма літерами (слово без цифр). Поєднання умов з допомогою
-        дужок, операторів 'and' і 'or'.
-        <br />
-        <br />
+        <p>
+            Звісно, тримай!
+        </p>
+        <p>
+            Перевірка всього пароля на те, чи є він числом (текстове ціле число без букв) або всіма літерами (слово без цифр). Поєднання умов з допомогою дужок, операторів <b class="code">and</b> і <b class="code">or</b>.
+        </p>
         <pre class="brush: python">
 def is_acceptable_password(x: str) -> bool:
 
     return (len(x)>6 and not x.isdigit() and not x.isalpha()) or len(x)>9
         </pre>
-        Використання функції any() і каскаду порівнянь.
-        <br />
-        <br />
+        <p>
+            Використання функції <b class="code">any()</b> і каскаду порівнянь.
+        </p>
         <pre class="brush: python">
 def is_acceptable_password(x: str) -> bool:
 
     return any((len(x) > 9, 0 < sum(ch.isdigit() for ch in x) < len(x) > 6))
         </pre>
-        Тисни "Best solutions" в меню місії і ти побачиш багато інших цікавих розв'язків!
+        <p><b>
+            Тисни "Best solutions" в меню місії і ти побачиш багато інших цікавих розв'язків!
+        </b></p>
     </div>
 </div>
 <div class="question-answer">
     <div class="question">
-        Дякую! Тепер я знаю і розумію більше! Все працює як слід!
+        <p>
+            Дякую! Тепер я знаю і розумію більше! Все працює як слід!
+        </p>
     </div>
     <div class="answer">
-        Приємно це чути! Спробуй розв'язати наступну в цій серії.
+        <p>
+            👍 Приємно це чути! Спробуй розв'язати наступну в цій серії.
+        </p>
     </div>
 </div>
 </body>
