--- a/translations/uk/hints/js/freeman_lex.html
+++ b/translations/uk/hints/js/freeman_lex.html
@@ -85,13 +85,13 @@ function isAcceptablePassword(password: string): boolean {
 <div class="question-answer">
     <div class="question">
         <p>
-            Show me more solutions!<br />
-            'Cause I wanna be a real 🥇 javascript Ninnjaa!
+            Покажи мені більше розв'язків!<br />
+            Адже я хочу стати справжнім 🥇 Героєм Javascript!
         </p>
     </div>
     <div class="answer">
         <p>
-            Sure, grab it!
+            Звісно, тримай!
         </p>
         <p>
             Тут бачимо анонімну функцію з перевіркою довжини більше 9 АБО наявністю цифри та не-цифри І довжиною більше 6.
