--- a/translations/fr/hints/freeman_lex.html
+++ b/translations/fr/hints/freeman_lex.html
@@ -20,7 +20,7 @@ def is_acceptable_password(password: str) -&gt; bool:
     return all([cond1, cond2, cond3])
         </pre>
         <p>
-            Dans cette mission, vous devriez ajouter à cette solution que si la longueur du mot de passe est supérieure à 9<b class="code">, les cond2</b> et <b class="code">cond3</b> ne sont pas nécessaires.
+            Dans cette mission, vous devriez ajouter à cette solution que si la longueur du mot de passe est supérieure à 9, les <b class="code">cond2</b> et <b class="code">cond3</b> ne sont pas nécessaires.
         </p>
     </div>
 </div>
