--- a/translations/fr/hints/freeman_lex.html
+++ b/translations/fr/hints/freeman_lex.html
@@ -113,7 +113,7 @@ def is_acceptable_password(x: str) -&gt; bool:
         </pre>
         </div>
         <p><b>
-            Cliquez sur "Meilleures solutions" dans le menu mission et découvrez de nombreuses autres solutions intéressantes!
+            Cliquez sur "Best solutions" dans le menu mission et découvrez de nombreuses autres solutions intéressantes!
         </b></p>
     </div>
 </div>
