--- a/translations/fr/hints/js/freeman_lex.html
+++ b/translations/fr/hints/js/freeman_lex.html
@@ -103,7 +103,7 @@ var isAcceptablePassword = (p, l = p.length) =&gt; l &gt; 9 || /\d\D\D\d/.test(p
         </pre>
         </div>
         <p><b>
-            Cliquez sur "Meilleures solutions" dans le menu mission et découvrez de nombreuses autres solutions intéressantes!
+            Cliquez sur "Best solutions" dans le menu mission et découvrez de nombreuses autres solutions intéressantes!
         </b></p>
     </div>
 </div>
