--- a/hints/freeman_lex.html
+++ b/hints/freeman_lex.html
@@ -112,9 +112,9 @@ def is_acceptable_password(x: str) -> bool:
     return any((len(x) > 9, 0 < sum(ch.isdigit() for ch in x) < len(x) > 6))
         </pre>
         </div>
-        <p><b>
-            Click "Best solutions" at mission menu and see a lot of other interesting solutions!
-        </b></p>
+        <p>
+            Click <b>Best Solutions</b> at mission menu and see a lot of other interesting solutions!
+        </p>
     </div>
 </div>
 <div class="question-answer">
