--- a/info/task_description.html
+++ b/info/task_description.html
@@ -11,7 +11,7 @@
 <ul>
     <li>the length should be bigger than 6;</li>
     <li>should contain at least one digit, but it cannot consist of just digits;</li>
-    <li>if the password is longer than 9 - previous rule (about one digit), is not required.</li>
+    <li>if the password is longer than 9 - previous rule is not required.</li>
 </ul>
 
 
