--- a/translations/fr/info/task_description.html
+++ b/translations/fr/info/task_description.html
@@ -11,7 +11,7 @@
 <ul>
     <li>la longueur doit être supérieure à 6;</li>
     <li>le mot de passe doit contenir au moins un chiffre, mais il ne peut pas être composé uniquement de chiffres;</li>
-    <li>si le mot de passe est supérieur à 9, la règle précédente (concernant un chiffre) n'est pas nécessaire.</li>
+    <li>si le mot de passe est supérieur à 9, la règle précédente n'est pas nécessaire.</li>
 </ul>
 
 
