--- a/translations/pl/info/task_description.html
+++ b/translations/pl/info/task_description.html
@@ -11,7 +11,7 @@
 <ul>
     <li>długość powinna być większa niż 6;</li>
     <li>powinno zawierać co najmniej jedną cyfrę, ale nie może składać się z samych cyfr;</li>
-    <li>jeśli hasło jest dłuższe niż 9 - poprzednia zasada (o jednej cyfrze), nie jest wymagana.</li>
+    <li>jeśli hasło jest dłuższe niż 9 - poprzednia zasada nie jest wymagana.</li>
 </ul>
 
 
