--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -11,7 +11,7 @@
 <ul>
     <li>довжина більше 6 символів;</li>
     <li>містить хоча б одну цифру, але не лише цифри;</li>
-    <li>якщо пароль довший за 9 - попередня умова (про цифри) не вимагається.</li>
+    <li>якщо пароль довший за 9 - попередня умова не вимагається.</li>
 </ul>
 
 
