--- a/translations/zh-hans/info/task_description.html
+++ b/translations/zh-hans/info/task_description.html
@@ -11,7 +11,7 @@
 <ul>
     <li>长度应大于6；</li>
     <li>应至少包含一个数字，但不能只包含数字；</li>
-    <li>如果密码长于9 - 前面的规则（关于一个数字），就不需要了。</li>
+    <li>如果密码长于9 - 前面的规则 就不需要了。</li>
 </ul>
 
 
